-- 清结算平台 P0 DDL - 普通商品落地准入版
-- Database: MySQL 8.x
-- 约定：
-- 1. 金额字段统一 DECIMAL(18,2)，比例字段 DECIMAL(8,4)。
-- 2. 时间字段统一 DATETIME(3)。
-- 3. P0 不包含冻结/止付字段和状态。
-- 4. 逻辑删除字段 deleted：0=未删除，1=已删除。
-- 5. tenant_id 预留多租户，单租户可固定为 'default'。

CREATE TABLE IF NOT EXISTS ccs_source_event (
  id BIGINT NOT NULL AUTO_INCREMENT COMMENT '自增主键',
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default' COMMENT '租户ID',
  event_no VARCHAR(64) NOT NULL COMMENT '清结算平台事件号',
  source_system VARCHAR(64) NOT NULL COMMENT '来源系统，如 LOCAL_LIFE_ORDER',
  business_scene VARCHAR(64) NOT NULL COMMENT '业务场景，如 LOCAL_LIFE_NORMAL',
  event_type VARCHAR(64) NOT NULL COMMENT '事件类型：WRITE_OFF_COMPLETED/REFUND_SUCCESS/WRITE_OFF_CANCELED',
  source_event_id VARCHAR(128) NOT NULL COMMENT '来源事件唯一ID',
  source_biz_no VARCHAR(128) NOT NULL COMMENT '来源业务单号，如订单号/核销单号/退款单号',
  source_order_no VARCHAR(128) DEFAULT NULL COMMENT '来源订单号',
  event_time DATETIME(3) NOT NULL COMMENT '业务事件发生时间',
  idempotent_key VARCHAR(256) NOT NULL COMMENT '事件幂等键',
  payload_json JSON NOT NULL COMMENT '原始事件载荷',
  process_status VARCHAR(32) NOT NULL DEFAULT 'INIT' COMMENT 'INIT/PROCESSING/SUCCESS/FAILED/IGNORED/WAITING',
  process_count INT NOT NULL DEFAULT 0 COMMENT '处理次数',
  next_retry_time DATETIME(3) DEFAULT NULL COMMENT '下次重试时间',
  last_error_code VARCHAR(64) DEFAULT NULL COMMENT '最后错误码',
  last_error_message VARCHAR(512) DEFAULT NULL COMMENT '最后错误信息',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0 COMMENT '逻辑删除',
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_source_event_no (event_no),
  UNIQUE KEY uk_ccs_source_event_idempotent (idempotent_key),
  UNIQUE KEY uk_ccs_source_event_source (source_system, source_event_id),
  KEY idx_ccs_source_event_biz (business_scene, event_type, source_biz_no),
  KEY idx_ccs_source_event_status (process_status, next_retry_time),
  KEY idx_ccs_source_event_order (source_order_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='清结算来源事件表';

CREATE TABLE IF NOT EXISTS ccs_clearing_result (
  id BIGINT NOT NULL AUTO_INCREMENT,
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default',
  clearing_no VARCHAR(64) NOT NULL COMMENT '清分结果号',
  source_event_no VARCHAR(64) NOT NULL COMMENT '来源事件号',
  source_system VARCHAR(64) NOT NULL,
  business_scene VARCHAR(64) NOT NULL,
  order_type VARCHAR(64) NOT NULL DEFAULT 'NORMAL_GOODS' COMMENT '订单类型',
  source_order_no VARCHAR(128) NOT NULL COMMENT '业务订单号',
  write_off_no VARCHAR(128) DEFAULT NULL COMMENT '核销单号',
  merchant_id VARCHAR(64) NOT NULL COMMENT '商户ID',
  merchant_name VARCHAR(128) DEFAULT NULL COMMENT '商户名称快照',
  currency VARCHAR(8) NOT NULL DEFAULT 'CNY',
  direction VARCHAR(16) NOT NULL DEFAULT 'POSITIVE' COMMENT 'POSITIVE/NEGATIVE',
  order_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '订单金额',
  paid_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '用户实付金额',
  refund_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '本次退款金额',
  merchant_receivable_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '商户应结金额',
  platform_receivable_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '平台应收金额',
  platform_discount_cost DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '平台优惠成本',
  merchant_discount_cost DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '商户优惠成本',
  member_discount_cost DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '会员折扣成本',
  points_cost DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '金豆/积分成本',
  rule_snapshot_no VARCHAR(64) DEFAULT NULL COMMENT '规则快照号',
  clearing_status VARCHAR(32) NOT NULL DEFAULT 'GENERATED' COMMENT 'GENERATED/CANCELED/ADJUSTED',
  idempotent_key VARCHAR(256) NOT NULL COMMENT '清分幂等键',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0,
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_clearing_no (clearing_no),
  UNIQUE KEY uk_ccs_clearing_idempotent (idempotent_key),
  KEY idx_ccs_clearing_order (business_scene, source_order_no),
  KEY idx_ccs_clearing_merchant (merchant_id, create_time),
  KEY idx_ccs_clearing_event (source_event_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='清分结果主表';

CREATE TABLE IF NOT EXISTS ccs_clearing_result_item (
  id BIGINT NOT NULL AUTO_INCREMENT,
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default',
  clearing_item_no VARCHAR(64) NOT NULL COMMENT '清分明细号',
  clearing_no VARCHAR(64) NOT NULL COMMENT '清分结果号',
  source_order_no VARCHAR(128) NOT NULL,
  participant_type VARCHAR(32) NOT NULL COMMENT 'MERCHANT/PLATFORM',
  participant_id VARCHAR(64) NOT NULL COMMENT '参与方ID',
  participant_name VARCHAR(128) DEFAULT NULL COMMENT '参与方名称快照',
  amount_type VARCHAR(64) NOT NULL COMMENT 'MERCHANT_RECEIVABLE/PLATFORM_RECEIVABLE/DISCOUNT_COST/REFUND_ADJUSTMENT',
  direction VARCHAR(16) NOT NULL COMMENT 'CREDIT/DEBIT',
  amount DECIMAL(18,2) NOT NULL COMMENT '金额，可正可负，方向由 direction 说明',
  currency VARCHAR(8) NOT NULL DEFAULT 'CNY',
  settlement_subject_type VARCHAR(32) NOT NULL COMMENT 'MERCHANT/PLATFORM',
  settlement_subject_id VARCHAR(64) NOT NULL COMMENT '结算主体ID',
  formula_code VARCHAR(64) DEFAULT NULL COMMENT '公式编码',
  formula_text VARCHAR(512) DEFAULT NULL COMMENT '公式快照',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0,
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_clearing_item_no (clearing_item_no),
  KEY idx_ccs_clearing_item_clearing (clearing_no),
  KEY idx_ccs_clearing_item_subject (settlement_subject_type, settlement_subject_id),
  KEY idx_ccs_clearing_item_order (source_order_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='清分结果明细表';

CREATE TABLE IF NOT EXISTS ccs_pending_settlement_item (
  id BIGINT NOT NULL AUTO_INCREMENT,
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default',
  pending_no VARCHAR(64) NOT NULL COMMENT '待结算项号',
  clearing_item_no VARCHAR(64) NOT NULL COMMENT '来源清分明细号',
  clearing_no VARCHAR(64) NOT NULL COMMENT '来源清分结果号',
  business_scene VARCHAR(64) NOT NULL,
  source_order_no VARCHAR(128) NOT NULL,
  write_off_no VARCHAR(128) DEFAULT NULL,
  merchant_id VARCHAR(64) NOT NULL,
  merchant_name VARCHAR(128) DEFAULT NULL,
  settlement_subject_type VARCHAR(32) NOT NULL DEFAULT 'MERCHANT',
  settlement_subject_id VARCHAR(64) NOT NULL,
  currency VARCHAR(8) NOT NULL DEFAULT 'CNY',
  original_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '原始待结算金额',
  adjusted_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '退款/调整金额，负数表示扣减',
  settlement_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '当前可结算金额',
  write_off_time DATETIME(3) NOT NULL COMMENT '核销/履约完成时间',
  eligible_time DATETIME(3) NOT NULL COMMENT '可结算时间',
  lifecycle_status VARCHAR(32) NOT NULL DEFAULT 'IN_TRANSIT' COMMENT 'IN_TRANSIT/ELIGIBLE/LOCKED/ACCOUNTING_PROCESSING/ACCOUNTING_FAILED/ACCOUNTED/CANCELED',
  locked_batch_no VARCHAR(64) DEFAULT NULL COMMENT '锁定批次号',
  locked_bill_no VARCHAR(64) DEFAULT NULL COMMENT '锁定结算单号',
  locked_time DATETIME(3) DEFAULT NULL COMMENT '锁定时间',
  accounted_time DATETIME(3) DEFAULT NULL COMMENT '入账成功时间',
  refund_status VARCHAR(32) NOT NULL DEFAULT 'NONE' COMMENT 'NONE/PARTIAL_REFUNDED/FULL_REFUNDED/AFTER_ACCOUNTING_REFUNDED',
  version INT NOT NULL DEFAULT 0 COMMENT '乐观锁版本',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0,
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_pending_no (pending_no),
  UNIQUE KEY uk_ccs_pending_clearing_item (clearing_item_no),
  KEY idx_ccs_pending_payable (merchant_id, lifecycle_status, eligible_time),
  KEY idx_ccs_pending_order (source_order_no),
  KEY idx_ccs_pending_bill (locked_bill_no),
  KEY idx_ccs_pending_status_time (lifecycle_status, update_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='待结算项表';

CREATE TABLE IF NOT EXISTS ccs_settlement_batch (
  id BIGINT NOT NULL AUTO_INCREMENT,
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default',
  batch_no VARCHAR(64) NOT NULL COMMENT '结算批次号',
  business_scene VARCHAR(64) NOT NULL,
  batch_type VARCHAR(32) NOT NULL DEFAULT 'MANUAL' COMMENT 'MANUAL/AUTO',
  settlement_subject_type VARCHAR(32) NOT NULL DEFAULT 'MERCHANT',
  settlement_subject_id VARCHAR(64) NOT NULL,
  merchant_id VARCHAR(64) NOT NULL,
  currency VARCHAR(8) NOT NULL DEFAULT 'CNY',
  item_count INT NOT NULL DEFAULT 0,
  total_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00,
  batch_status VARCHAR(32) NOT NULL DEFAULT 'CREATED' COMMENT 'CREATED/PROCESSING/FINISHED/FAILED/CANCELED',
  operator_id VARCHAR(64) DEFAULT NULL,
  operator_name VARCHAR(64) DEFAULT NULL,
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0,
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_batch_no (batch_no),
  KEY idx_ccs_batch_subject (settlement_subject_type, settlement_subject_id, create_time),
  KEY idx_ccs_batch_status (batch_status, create_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='结算批次表';

CREATE TABLE IF NOT EXISTS ccs_settlement_bill (
  id BIGINT NOT NULL AUTO_INCREMENT,
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default',
  bill_no VARCHAR(64) NOT NULL COMMENT '结算单号',
  batch_no VARCHAR(64) NOT NULL COMMENT '结算批次号',
  business_scene VARCHAR(64) NOT NULL,
  settlement_subject_type VARCHAR(32) NOT NULL DEFAULT 'MERCHANT',
  settlement_subject_id VARCHAR(64) NOT NULL,
  merchant_id VARCHAR(64) NOT NULL,
  merchant_name VARCHAR(128) DEFAULT NULL,
  currency VARCHAR(8) NOT NULL DEFAULT 'CNY',
  bill_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '结算单金额',
  item_count INT NOT NULL DEFAULT 0 COMMENT '明细数量',
  settlement_start_time DATETIME(3) DEFAULT NULL COMMENT '结算范围开始',
  settlement_end_time DATETIME(3) DEFAULT NULL COMMENT '结算范围结束',
  bill_status VARCHAR(32) NOT NULL DEFAULT 'CREATED' COMMENT 'CREATED/CONFIRMED/ACCOUNTING_PROCESSING/ACCOUNTED/ACCOUNTING_FAILED/UNKNOWN/CANCELED',
  accounting_status VARCHAR(32) NOT NULL DEFAULT 'INIT' COMMENT 'INIT/PROCESSING/SUCCESS/FAILED/UNKNOWN',
  idempotent_key VARCHAR(256) NOT NULL COMMENT '结算确认幂等键',
  accounting_idempotent_key VARCHAR(256) DEFAULT NULL COMMENT '账务入账幂等键',
  accounting_request_no VARCHAR(64) DEFAULT NULL COMMENT '账务请求号',
  fund_account_flow_no VARCHAR(64) DEFAULT NULL COMMENT '账户流水号',
  voucher_urls VARCHAR(2048) DEFAULT NULL COMMENT '结算凭证 URL，逗号分隔或 JSON 字符串',
  fail_code VARCHAR(64) DEFAULT NULL,
  fail_reason VARCHAR(512) DEFAULT NULL,
  retry_count INT NOT NULL DEFAULT 0,
  operator_id VARCHAR(64) DEFAULT NULL,
  operator_name VARCHAR(64) DEFAULT NULL,
  confirmed_time DATETIME(3) DEFAULT NULL,
  accounting_success_time DATETIME(3) DEFAULT NULL,
  version INT NOT NULL DEFAULT 0,
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0,
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_bill_no (bill_no),
  UNIQUE KEY uk_ccs_bill_idempotent (idempotent_key),
  UNIQUE KEY uk_ccs_bill_accounting_idem (accounting_idempotent_key),
  KEY idx_ccs_bill_merchant (merchant_id, create_time),
  KEY idx_ccs_bill_status (bill_status, create_time),
  KEY idx_ccs_bill_batch (batch_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='结算单主表';

CREATE TABLE IF NOT EXISTS ccs_settlement_bill_item (
  id BIGINT NOT NULL AUTO_INCREMENT,
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default',
  bill_item_no VARCHAR(64) NOT NULL COMMENT '结算单明细号',
  bill_no VARCHAR(64) NOT NULL COMMENT '结算单号',
  batch_no VARCHAR(64) NOT NULL COMMENT '结算批次号',
  pending_no VARCHAR(64) NOT NULL COMMENT '待结算项号',
  clearing_item_no VARCHAR(64) NOT NULL COMMENT '清分明细号',
  source_order_no VARCHAR(128) NOT NULL,
  write_off_no VARCHAR(128) DEFAULT NULL,
  merchant_id VARCHAR(64) NOT NULL,
  currency VARCHAR(8) NOT NULL DEFAULT 'CNY',
  settlement_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00,
  item_status VARCHAR(32) NOT NULL DEFAULT 'LOCKED' COMMENT 'LOCKED/ACCOUNTING_PROCESSING/ACCOUNTED/ACCOUNTING_FAILED/CANCELED',
  settlement_success_key VARCHAR(128) DEFAULT NULL COMMENT '入账成功防重键，成功时写 pending_no，未成功为 NULL',
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0,
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_bill_item_no (bill_item_no),
  UNIQUE KEY uk_ccs_bill_item_success (settlement_success_key),
  KEY idx_ccs_bill_item_bill (bill_no),
  KEY idx_ccs_bill_item_pending (pending_no),
  KEY idx_ccs_bill_item_order (source_order_no)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='结算单明细表';

CREATE TABLE IF NOT EXISTS ccs_accounting_posting_order (
  id BIGINT NOT NULL AUTO_INCREMENT,
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default',
  posting_no VARCHAR(64) NOT NULL COMMENT '入账单号',
  bill_no VARCHAR(64) NOT NULL COMMENT '结算单号',
  merchant_id VARCHAR(64) NOT NULL,
  business_scene VARCHAR(64) NOT NULL,
  posting_amount DECIMAL(18,2) NOT NULL DEFAULT 0.00 COMMENT '入账金额',
  currency VARCHAR(8) NOT NULL DEFAULT 'CNY',
  accounting_interface VARCHAR(64) NOT NULL DEFAULT 'recordProductSettlement' COMMENT '调用账务接口',
  accounting_scene VARCHAR(64) NOT NULL DEFAULT 'PRODUCT_SETTLEMENT' COMMENT '账务场景',
  idempotent_key VARCHAR(256) NOT NULL COMMENT '账务幂等键',
  posting_status VARCHAR(32) NOT NULL DEFAULT 'INIT' COMMENT 'INIT/REQUESTING/SUCCESS/FAILED/UNKNOWN',
  request_payload JSON DEFAULT NULL COMMENT '账务请求快照',
  response_payload JSON DEFAULT NULL COMMENT '账务响应快照',
  accounting_request_no VARCHAR(64) DEFAULT NULL,
  fund_account_flow_no VARCHAR(64) DEFAULT NULL,
  fail_code VARCHAR(64) DEFAULT NULL,
  fail_reason VARCHAR(512) DEFAULT NULL,
  request_time DATETIME(3) DEFAULT NULL,
  success_time DATETIME(3) DEFAULT NULL,
  retry_count INT NOT NULL DEFAULT 0,
  next_retry_time DATETIME(3) DEFAULT NULL,
  version INT NOT NULL DEFAULT 0,
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  update_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3) ON UPDATE CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0,
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_posting_no (posting_no),
  UNIQUE KEY uk_ccs_posting_bill (bill_no),
  UNIQUE KEY uk_ccs_posting_idem (idempotent_key),
  KEY idx_ccs_posting_status (posting_status, next_retry_time),
  KEY idx_ccs_posting_merchant (merchant_id, create_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='账务入账编排单';

CREATE TABLE IF NOT EXISTS ccs_settlement_operation_log (
  id BIGINT NOT NULL AUTO_INCREMENT,
  tenant_id VARCHAR(32) NOT NULL DEFAULT 'default',
  operation_no VARCHAR(64) NOT NULL COMMENT '操作日志号',
  target_type VARCHAR(64) NOT NULL COMMENT 'PENDING_ITEM/SETTLEMENT_BILL/POSTING_ORDER',
  target_no VARCHAR(64) NOT NULL COMMENT '目标单号',
  operation_type VARCHAR(64) NOT NULL COMMENT 'CREATE/CONFIRM/CANCEL/POSTING/RETRY/REPAIR',
  before_status VARCHAR(32) DEFAULT NULL,
  after_status VARCHAR(32) DEFAULT NULL,
  operator_id VARCHAR(64) DEFAULT NULL,
  operator_name VARCHAR(64) DEFAULT NULL,
  remark VARCHAR(512) DEFAULT NULL,
  ext_json JSON DEFAULT NULL,
  create_time DATETIME(3) NOT NULL DEFAULT CURRENT_TIMESTAMP(3),
  deleted TINYINT NOT NULL DEFAULT 0,
  PRIMARY KEY (id),
  UNIQUE KEY uk_ccs_operation_no (operation_no),
  KEY idx_ccs_operation_target (target_type, target_no),
  KEY idx_ccs_operation_time (create_time)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COMMENT='清结算操作日志表';
