stateDiagram-v2
    [*] --> IN_TRANSIT
    IN_TRANSIT --> ELIGIBLE: mature
    ELIGIBLE --> LOCKED: lockForBill
    LOCKED --> ACCOUNTING_PROCESSING: startAccounting
    ACCOUNTING_PROCESSING --> ACCOUNTED: success
    ACCOUNTING_PROCESSING --> ACCOUNTING_FAILED: failed
    ACCOUNTING_PROCESSING --> UNKNOWN: unknown
    ACCOUNTING_FAILED --> ACCOUNTING_PROCESSING: retry
    UNKNOWN --> ACCOUNTED: querySuccess
    UNKNOWN --> ACCOUNTING_FAILED: queryFailed
    ACCOUNTED --> [*]
